# stt_tts_class

./: AUDIO_TROUBLESHOOTING.md  IMPROVEMENTS_README.md  IMPROVEMENTS_SUMMARY.md  README.md  feat2.py  llm.py  main.py  main_improved.py  main_old.py  pyproject.toml  quick_speaker_test.py  requirements.txt  setup.bat  setup.sh  stt.py  tts.py  tts_improved.py
app/: llm.py  main.app  main.py
tools/: audio_diagnostic.py  quick_mic_test.py
