[project]
name = "mini-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=2.30.0",
    "streamlit>=1.56.0",
    "speechrecognition>=3.10.0",
    "edge-tts>=7.2.0",
    "pygame>=2.6.0",
    "pyaudio>=0.2.14",
]
